--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>4.0.0-SNAPSHOT</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.cinelist.projeto</groupId>
+	<groupId>com.cinelist</groupId>
 	<artifactId>cinelist</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>cinelist</name>
